--- a/bountiful/fresh.html
+++ b/bountiful/fresh.html
@@ -30,12 +30,12 @@
             <a href="index.html">Home</a>
             <a href="fresh.html">Fresh</a>
             <a href="about.html">About Us</a>
-            <a id="nearest-store" href="index.html">Find Store</a>
+            <a id="nearest-store-mobile" href="index.html">Find Store</a>
         </div>
     </header>
     
     <main id="join_main">
-        <form id="myform" method="get" action="#">
+        <form id="myform" action="#">
             <label for="fname">Name</label>
             <input id="fname" name="firstname" required>
             
@@ -45,18 +45,18 @@
             <label for="phone">Cell Phone</label>
             <input id="phone" name="phone" type="tel" placeholder="999-999-9999">
 
-            <label> Please select 3 fruits<br>..................................</label>
+            <label> Please select 3 fruits<br>...........................................</label>
             <div id="radio">
-            <label id ="fruitlabel1" for="one">Fruit</label> 
-            <input id="one" name="f1" type="checkbox">
-            <label id ="fruitlabel2"for="two">Fruit</label> 
-            <input id="two" name="f2" type="checkbox">
-            <label id ="fruitlabel3" for="three">Fruit</label> 
-            <input id="three" name="f3" type="checkbox">
-            <label id ="fruitlabel4" for="three">Fruit</label> 
-            <input id="three" name="f4" type="checkbox">
-            <label id ="fruitlabel5" for="three">Fruit</label> 
-            <input id="three" name="f5" type="checkbox">
+                <label id ="fruitlabel1" for="one">Fruit</label> 
+                <input id="one" name="f1" type="checkbox">
+                <label id ="fruitlabel2" for="two">Fruit</label> 
+                <input id="two" name="f2" type="checkbox">
+                <label id ="fruitlabel3" for="three">Fruit</label> 
+                <input id="three" name="f3" type="checkbox">
+                <label id ="fruitlabel4" for="three">Fruit</label> 
+                <input id="four" name="f4" type="checkbox">
+                <label id ="fruitlabel5" for="three">Fruit</label> 
+                <input id="five" name="f5" type="checkbox">
             </div>
 
             <label for="message">Special Requests:</label>
@@ -79,15 +79,15 @@
             <span id="phoneP"></span>
 
             <p>Fruit 1:</p>
-            <span id="fruit1"></span>
+            <span id="fruit1">Not Selected</span>
 
             <p>Fruit 2:</p>
-            <span id="fruit2"></span>
+            <span id="fruit2">Not Selected</span>
 
             <p>Fruit 3:</p>
-            <span id="fruit3"></span>
+            <span id="fruit3">Not Selected</span>
 
-            <p>Special Instructions:</p>
+            <p>Instructions:</p>
             <span id="spec"></span>
 
             <p>Order Date:</p>
