--- a/bountiful/index.html
+++ b/bountiful/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bountiful Foods</title>
     <link rel="stylesheet" href="styles/main.css">
+    <script defer src="scripts/new.js"></script>
     <script defer src="scripts/main.js"></script>
+    <!-- <script defer src="scripts/fresh.js"></script> -->
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
@@ -28,7 +30,7 @@
         <a href="index.html">Home</a>
         <a href="fresh.html">Fresh</a>
         <a href="about.html">About Us</a>
-        <a id="nearest-store" href="index.html">Find Store</a>
+        <a id="nearest-store-mobile" href="index.html">Find Store</a>
     </div>
 </header>
 
