--- a/bountiful/fresh.html
+++ b/bountiful/fresh.html
@@ -35,7 +35,7 @@
     </header>
     
     <main id="join_main">
-        <form id="myform" action="#">
+        <form id="myform" method="#" action="#">
             <label for="fname">Name</label>
             <input id="fname" name="firstname" required>
             
