fixed a million things

--- a/bountiful/fresh.html
+++ b/bountiful/fresh.html
@@ -7,7 +7,7 @@
     <title>Fresh</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/fresh.css">
-    <!-- <script defer src="scripts/main.js"></script> -->
+    <script defer src="scripts/main.js"></script>
     <script defer src="scripts/fresh.js"></script>
 </head>
 <body>
