--- a/bountiful/index.html
+++ b/bountiful/index.html
@@ -37,13 +37,17 @@
 <main>
     <section id="hero">
         
-        <img id="img" class="smoothies" src="images/smoothie-1.jpg" alt="Various Fruits">
-        <img id="img" class="smoothies"src="images/smoothie-3.jpg" alt="Various Fruits">
-        <img id="img" class="smoothies"src="images/smoothie-4.jpg" alt="Various Fruits">
-        <img id="img" class="smoothies"src="images/mango-smoothie.jpg" alt="Various Fruits">
-        <img id="hero-img" src="images/smoothie-2.jpg" alt="Various Fruits">
+        <img id="img" class="smoothies" src="https://dummyimage.com/300x450/ccc/fff" data-src="images/smoothie-1_optimized.jpg" alt="Various Fruits">
+        <img id="img" class="smoothies"src="https://dummyimage.com/300x450/ccc/fff" data-src="images/smoothie-3_optimized.jpg" alt="Various Fruits">
+        <img id="img" class="smoothies"src="https://dummyimage.com/300x450/ccc/fff" data-src="images/smoothie-4_optimized.jpg"alt="Various Fruits">
+        <img id="img" class="smoothies"src="https://dummyimage.com/300x450/ccc/fff" data-src="images/mango-smoothie_optimized.jpg"alt="Various Fruits">
+        <img id="hero-img" src="https://dummyimage.com/800x550/ccc/fff" data-src="images/smoothie-2.jpg"alt="Various Fruits">
         <button id="hero-button" onclick="window.location.href='fresh.html'">Design Your Drink!</button>
     </section>
+
+    <div id="mixed">
+        <h3>You have mixed <span id="drinks"></span> drinks</h3>
+    </div>
 
     <div id="cali">
         <h1>Naturally grown</h1>
@@ -62,8 +66,6 @@
             <p>High: <span id="maxt"></span>&#176;F</p>
             <p>Low: <span id="mint"></span>&#176;F</p>
             <p>Humidity: <span id="hum"></span>%</p>
-            <!-- <p>Wind Speed: <span id="ws"></span>mph</p>
-            <p>Wind Chill: <span id="wc">N/A</span></p> -->
         </div>
 
         <div id="weather-1">
@@ -82,14 +84,14 @@
             <p>Low: <span id="mint2"></span>&#176;F</p>
         </div>
     </section>
-
-    <div>
-        <h3>You have mixed <span id="drinks"></span> drinks</h3>
-    </div>
 </main>
 
 <footer>
-
+    <span id="last-modified"></span>
+    <p>Phone: 524-125-4121</p>
+    <a href="https://instagram.com"><img src="images/instagram_social_icon.png"> </a>
+    <a href="https://facebook.com"><img src="images/facebook_icon.png"> </a>
+    <a href="https://twitter.com"><img src="images/twitter_icon.png"> </a>
 </footer>
 
 </body>
