fixed the form submission error

--- a/bountiful/about.html
+++ b/bountiful/about.html
@@ -46,5 +46,13 @@
         <p>Phone: 555-3433-1231</p>
         <p>Email: Bountifulfoods@gmail.com</p>
     </main>
+
+    <footer>
+        <span id="last-modified"></span>
+        <p>Phone: 524-125-4121</p>
+        <a href="https://instagram.com"><img src="images/instagram_social_icon.png"> </a>
+        <a href="https://facebook.com"><img src="images/facebook_icon.png"> </a>
+        <a href="https://twitter.com"><img src="images/twitter_icon.png"> </a>
+    </footer>
 </body>
 </html>
