--- a/bountiful/fresh.html
+++ b/bountiful/fresh.html
@@ -35,7 +35,7 @@
     </header>
     
     <main id="join_main">
-        <form id="myform" method="#" action="#">
+        <form id="myform" method="POST" action="javascript:void(0)">
             <label for="fname">Name</label>
             <input id="fname" name="firstname" required>
             
@@ -110,5 +110,13 @@
 
         </div>
     </main>
+
+    <footer>
+        <span id="last-modified"></span>
+        <p>Phone: 524-125-4121</p>
+        <a href="https://instagram.com"><img src="images/instagram_social_icon.png"> </a>
+        <a href="https://facebook.com"><img src="images/facebook_icon.png"> </a>
+        <a href="https://twitter.com"><img src="images/twitter_icon.png"> </a>
+    </footer>
 </body>
 </html>
